[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Heroes/thief.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Heroes/Hero.gd" type="Script" id=2]
[ext_resource path="res://SFX/Buff.ogg" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 8.0

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "buffed"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0313726, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "freeze"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.858824, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 2, 2, 2, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Thief" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 24
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
movementSpeed = 25.0
gravity = 100.0
movementSpeedBuff = 10.0
healthPointsBuff = 0
defenseElement = 4

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move"
anims/move = SubResource( 2 )

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
anims/buffed = SubResource( 3 )
anims/freeze = SubResource( 4 )
anims/hit = SubResource( 5 )

[node name="BuffAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound Effects"
